src/less/style.less
//
// Here is Bootstrap
// ==========================================================================


// Core variables and mixins
// @import "../vendors/bootstrap-less/less/variables.less";
@import "../vendors/bootstrap-less/less/mixins.less";

// Reset
@import "../vendors/bootstrap-less/less/normalize.less";
// @import "../vendors/bootstrap-less/less/print.less";

// Core CSS
@import "../vendors/bootstrap-less/less/scaffolding.less";
@import "../vendors/bootstrap-less/less/type.less";
// @import "../vendors/bootstrap-less/less/code.less";
@import "../vendors/bootstrap-less/less/grid.less";
// @import "../vendors/bootstrap-less/less/tables.less";
// @import "../vendors/bootstrap-less/less/forms.less";
@import "../vendors/bootstrap-less/less/buttons.less";

// Components
// @import "../vendors/bootstrap-less/less/component-animations.less";
// @import "../vendors/bootstrap-less/less/glyphicons.less";
// @import "../vendors/bootstrap-less/less/dropdowns.less";
@import "../vendors/bootstrap-less/less/button-groups.less";
// @import "../vendors/bootstrap-less/less/input-groups.less";
@import "../vendors/bootstrap-less/less/navs.less";
// @import "../vendors/bootstrap-less/less/navbar.less";
// @import "../vendors/bootstrap-less/less/breadcrumbs.less";
// @import "../vendors/bootstrap-less/less/pagination.less";
// @import "../vendors/bootstrap-less/less/pager.less";
// @import "../vendors/bootstrap-less/less/labels.less";
// @import "../vendors/bootstrap-less/less/badges.less";
// @import "../vendors/bootstrap-less/less/jumbotron.less";
// @import "../vendors/bootstrap-less/less/thumbnails.less";
// @import "../vendors/bootstrap-less/less/alerts.less";
// @import "../vendors/bootstrap-less/less/progress-bars.less";
// @import "../vendors/bootstrap-less/less/media.less";
// @import "../vendors/bootstrap-less/less/list-group.less";
// @import "../vendors/bootstrap-less/less/panels.less";
// @import "../vendors/bootstrap-less/less/wells.less";
// @import "../vendors/bootstrap-less/less/close.less";

// Components w/ JavaScript
// @import "../vendors/bootstrap-less/less/modals.less";
// @import "../vendors/bootstrap-less/less/tooltip.less";
// @import "../vendors/bootstrap-less/less/popovers.less";
// @import "../vendors/bootstrap-less/less/carousel.less";

// Utility classes
@import "../vendors/bootstrap-less/less/utilities.less";
@import "../vendors/bootstrap-less/less/responsive-utilities.less";



//
// Here is Soundcloud player
// ==========================================================================

//  Here is the imports found in :
//  ../vendors/soundcloud.custom.player/css/sc-player-standard.css;
// More docs : https://github.com/soundcloud/soundcloud-custom-player
// @import (inline) "../vendors/soundcloud.custom.player/css/sc-player-standard/standards.css";
// @import (inline) "../vendors/soundcloud.custom.player/css/sc-player-standard/structure-horizontal.css";
// @import (inline) "../vendors/soundcloud.custom.player/css/sc-player-standard/colors-green.css";

// @import (inline) "../vendors/soundcloud.custom.player/css/sc-player.css";



//
// Here is my stuff
// ==========================================================================



// Bootstrap variables overrides
// =====================================
@import "_variables.less";

@transluscent: rgba(0, 40, 80, 0.8);
@transluscent_ie: rgb(0, 40, 80);
@lines: darken(@brand-primary, 40%);


//
// Fonts
// ==========================================================================

@import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,700,900,400italic,700italic);




//
// Tags
// ==========================================================================

a:hover { text-decoration: none; }
html {
    background: #151218 url(/assets/images/bg.jpg) no-repeat fixed center center;
    background-size: cover;
}
body {
    font-family: 'Titillium Web', sans-serif;
    background-color: transparent;
    &.debug {
        &:before {
            display: block;
            padding: 10px;
            position: fixed; top: 0; left: 0;
            background-color: #000;
            color: white;
        }
        @media (min-width: @screen-phone) {
            &:before {content: "phone"}
        }
        @media (min-width: @screen-tablet) {
            &:before {content: "tablet"}
        }
        @media (min-width: @screen-desktop) {
            &:before {content: "desktop"}
        }
        @media (min-width: @screen-lg) {
            &:before {content: "large"}
        }

    }
}

h1, h2, h3, h4, h5, h6 {
    text-transform: uppercase;
}

img {
    max-width: 100%;
    height: auto;
}

iframe {
    border: 0;
    width: 100%;
}


//
// Common elements and overrides
// ==========================================================================
.video-container {
    // http://embedresponsively.com/
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
    max-width: 100%;
    height: auto;
    iframe, object, embed {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}


// Nav tabs bootstrap override
// =====================================
.nav-tabs {
    text-transform: uppercase;
    > li > a  {
        border-radius: 0;
    }
    .active {
        font-weight: bold;
    }
}



// Soundcloud player
// =====================================
// https://soundcloud.com/euradionantes/sets/ep2014

.sc {
    &-player {
        position: relative;
        min-height: 500px;
        &.playing {
            .sc-pause {
                display: inline-block !important;
                visibility: visible !important;
            }
            .sc-play {
                .hidden;
            }
        }
    }

    // Info box
    &-info {
        padding: 2em 0;
        h1, h2 {
            font-size: 140%;
            margin: 0 0 .3em 0;
        }
    }

    &-controls { margin-bottom: 2em; }


    // Time viewer
    &-scrubber {
        position: relative;
        margin-bottom: 1em;
    }
    &-time-span {
        position: relative;
        background-color: #999;
        img {
            display: block;
            // opacity: .5;
        }
    }
    &-waveform-container {
        position: relative;
        height: 100%;
        // min-height: 120px;
        z-index: 100;
    }
    &-buffer,
    &-played {
        position: absolute;
        top: 0; left: 0;
        height: 100%;
        z-index: 99;
    }
    &-buffer { background-color: #999; }
    &-played { background-color: darken(@brand-primary, 40%); }
    &-time-indicators {
        .btn;
        .btn-xs;
        background-color: black;
        position: absolute;
        top: 5px; right: 5px;
        z-index: 1000;
    }

    // The playable list
    &-trackslist {
        max-height: 300px;
        overflow: scroll;
        margin: 0;
        padding: 0;
        a {
            display: block;
            width: 90%;
            float: left;
        }
        li {
            list-style: none;
            border-bottom: 1px solid @lines;
            padding: .2em .6em;
            .clearfix;
            &.active a {
                font-weight: bold;
                color: white;
            }
        }
    }
    &-track-duration {
        float: right;
    }

    // The artworks, no artworks, so get out
    &-artwork-list { display: none; }



    // The controls
    &-controls {
        padding: 1em;
        text-align: center;
    }
    &-play,
    &-pause {
        .btn;
        .btn-lg;
        .btn-primary;
        font-size: 220%;
    }
    &-play:before {
        content: '\25B6';
        font-size: 60%;
        padding-right: .3em;
    }
    &-pause.hidden {
        display: block;
        visibility: visible;
    }



    // A little info box that comes other
    &-info-toggle {
        display: none;
    }
    &-info {
        z-index: 1000;

        // When shown
        &.active {
            display: block;
            opacity: 1;
        }
        // A close button
        &-close {
            display: none;
        }
    }
}





//
// Layout
// ==========================================================================

// Main structure
#main {
    &-header,
    &-content,
    &-footer {
        .make-row;
    }

    // Header
    &-header {
        // height: 30em;
    }
}

// Main Navigation


// Live contents (tweets, video and sound)
.live {
    margin-bottom: 3em;
    .clearfix;
    &-media { .make-md-column(8); }
    &-tweets { .make-md-column(4); }
}

// RSS and Tmblr content
.cold {
    .make-xs-column(12);
    margin-bottom: 3em;
}





//
// Main elements
// ==========================================================================

#page {

}
#main-content,
#main-footer {
    background-color: @transluscent;
    padding-top: 1.5em;
}


#main-header {

}
#main-content {

}
#main-footer {
    text-align: center;
    background-color: darken(@transluscent, 10%);
    padding-bottom: 1.5em;
}






// Header
// =====================================


.logo-euro {
    width: 300px;
}
#main-header {
    background-color: rgba(0, 0, 0, 0.2);
}

#main-header-banner {
    margin-bottom: 3em;
    text-align: center;
    text-shadow: 0 3px 3px #000;
    padding:1em;

    h1 {
        font-size: 4em;
        font-weight: bold;
        // margin-bottom: 2em;
        @media(max-width: @screen-xs) {
            font-size: 3em;
        }
    }
    small {
        display: block;
    }
    img {
        @media(min-width: @screen-md) {
            margin: 0 20px;
        }
    }
}

#main-nav {
    font-size: 290%;
    line-height: .8;
    text-transform: uppercase;

    strong {
        font-weight: normal;
    }
    ul {
        list-style: none;
        margin: 0; padding: 0;
        display: table;
        table-layout: fixed;
        width: 100%;
    }
    li {
        display: table-cell;
        // width: 33.333333%;
    }
    a {
        display: block;
        padding: .5em 0 .5em .5em;
        min-height: 3.2em;
        transition: all .3s;
        background: darken(@transluscent, 10%);

        &:hover, &:focus {
            background-color: #000;
        }

        &.current {
            color: white;
            position: relative;
            background: @transluscent;
        }

    }
    .date {
        font-weight: bold;
    }
    .month {
        font-size: 60%;
        font-style: normal;
    }
    .acc {
        display: block;
        font-size: 40%;
        font-weight: 400;
        margin-top: .5em;
        line-height: 1;
        text-transform: none;
        .hidden-xs;
    }
}


//
// Live elements
// ==========================================================================

.live {
    .tab-content { margin-bottom: 2em; }

    &-intro { font-size: 1.3em; }
    &-tweets {
        header { padding: 1em 0; }
        iframe {width: 100%}

        @media(max-width: @screen-xs) {
            margin-top: 2em;
        }

        .group-link,
        h1 {
            display: inline-block;
        }
        h1 {
            font-size: 1.5em;
            margin: 0;
            padding: 0;
        }
        .group-link { float: right; }
    }

}


//
// Cold elements
// ==========================================================================
.cold {
    .hidden;
}
#cold {
    &-tmblr {
        .container { .make-row; }
        article {
            .make-sm-column(4);
            h1 { font-size: 120%; }
        }
    }
}

